--- a/web_bd/style.css
+++ b/web_bd/style.css
@@ -118,6 +118,16 @@ button:hover{
 	margin-bottom: 2.5vh;
 }
 
+#boutons_accueil a{
+	text-decoration: none;
+}
+
+#bouton_accueil{
+	display: flex;
+	flex-direction: inline;
+	justify-content: space-between;
+}
+
 #contenu_infos{
 	width: 100vw;
 	height: 100vh;
